@@ -45,6 +45,10 @@ import org.apache.lucene.util.NumericUtils;
  * optimization to skip non-competitive documents. This optimization relies on the assumption that
  * the same data is stored in these points and doc values.
  *
+ * <p>Sorting on a SORTED(_SET) field that is indexed with both doc values and term index may use an
+ * optimization to skip non-competitive documents. This optimization relies on the assumption that
+ * the same data is stored in these term index and doc values.
+ *
  * <p>Created: Feb 11, 2004 1:25:29 PM
  *
  * @since lucene 1.4
@@ -131,8 +135,8 @@ public class SortField {
   // Used for 'sortMissingFirst/Last'
   protected Object missingValue = null;
 
-  // Indicates if numeric sort should be optimized with Points index. Set to true by default.
-  @Deprecated private boolean optimizeSortWithPoints = true;
+  // Indicates if sort should be optimized with indexed data. Set to true by default.
+  @Deprecated private boolean optimizeSortWithIndexedData = true;
 
   /**
    * Creates a sort by terms in the given field with the type of term values explicitly given.
@@ -537,7 +541,10 @@ public class SortField {
         break;
 
       case STRING:
-        return new TermOrdValComparator(numHits, field, missingValue == STRING_LAST, reverse);
+        fieldComparator =
+            new TermOrdValComparator(
+                numHits, field, missingValue == STRING_LAST, reverse, enableSkipping);
+        break;
 
       case STRING_VAL:
         fieldComparator =
@@ -551,7 +558,7 @@ public class SortField {
       default:
         throw new IllegalStateException("Illegal sort type: " + type);
     }
-    if (getOptimizeSortWithPoints() == false) {
+    if (getOptimizeSortWithIndexedData() == false) {
       fieldComparator.disableSkipping();
     }
     return fieldComparator;
@@ -627,6 +634,39 @@ public class SortField {
   }
 
   /**
+   * Enables/disables numeric sort optimization to use the indexed data.
+   *
+   * <p>Enabled by default. By default, sorting on a numeric field activates point sort optimization
+   * that can efficiently skip over non-competitive hits. Sort optimization has a number of
+   * requirements, one of which is that SortField.Type matches the Point type with which the field
+   * was indexed (e.g. sort on IntPoint field should use SortField.Type.INT). Another requirement is
+   * that the same data is indexed with points and doc values for the field.
+   *
+   * <p>By default, sorting on a SORTED(_SET) field activates sort optimization that can efficiently
+   * skip over non-competitive hits. Sort optimization requires that the same data is indexed with
+   * term index and doc values for the field.
+   *
+   * @param optimizeSortWithIndexedData providing {@code false} disables the optimization, in cases
+   *     where these requirements can't be met.
+   * @deprecated should only be used for compatibility with 8.x indices that got created with
+   *     inconsistent data across fields, or the wrong sort configuration in the index sort
+   */
+  @Deprecated // Remove in Lucene 10
+  public void setOptimizeSortWithIndexedData(boolean optimizeSortWithIndexedData) {
+    this.optimizeSortWithIndexedData = optimizeSortWithIndexedData;
+  }
+
+  /**
+   * Returns whether sort optimization should be optimized with indexed data
+   *
+   * @return whether sort optimization should be optimized with indexed data
+   */
+  @Deprecated // Remove in Lucene 10
+  public boolean getOptimizeSortWithIndexedData() {
+    return optimizeSortWithIndexedData;
+  }
+
+  /**
    * Enables/disables numeric sort optimization to use the Points index.
    *
    * <p>Enabled by default. By default, sorting on a numeric field activates point sort optimization
@@ -638,20 +678,22 @@ public class SortField {
    * @param optimizeSortWithPoints providing {@code false} disables the optimization, in cases where
    *     these requirements can't be met.
    * @deprecated should only be used for compatibility with 8.x indices that got created with
-   *     inconsistent data across fields, or the wrong sort configuration in the index sort
+   *     inconsistent data across fields, or the wrong sort configuration in the index sort. This is
+   *     a duplicate method for {@code SortField#setOptimizeSortWithIndexedData}.
    */
   @Deprecated // Remove in Lucene 10
   public void setOptimizeSortWithPoints(boolean optimizeSortWithPoints) {
-    this.optimizeSortWithPoints = optimizeSortWithPoints;
+    setOptimizeSortWithIndexedData(optimizeSortWithPoints);
   }
 
   /**
    * Returns whether sort optimization should be optimized with points index
    *
    * @return whether sort optimization should be optimized with points index
+   * @deprecated This is a duplicate method for {@code SortField#getOptimizeSortWithIndexedData}.
    */
   @Deprecated // Remove in Lucene 10
   public boolean getOptimizeSortWithPoints() {
-    return optimizeSortWithPoints;
+    return getOptimizeSortWithIndexedData();
   }
 }
